--- a/PLChipGroup/src/main/res/values/attrs.xml
+++ b/PLChipGroup/src/main/res/values/attrs.xml
@@ -17,10 +17,26 @@
 
         <!-- 以下自定义的 -->
         <!-- 最多显示多少条，默认0，小于=0时，不限制。如果超过xx条，则显示：收缩和展开 -->
-        <attr name="maxCount" format="integer" />
+        <attr name="plcg_maxCount" format="integer" />
 
         <!-- chip的高度，默认24dip -->
-        <attr name="chipHeight" format="dimension" />
+        <attr name="plcg_height" format="dimension" />
+
+        <!-- chip的文字大小 -->
+        <attr name="plcg_textSize" format="dimension" />
+
+        <!-- 选中状态下的边框颜色 -->
+        <attr name="plcg_color_stroke" format="color" />
+        <!-- 未选中状态下的边框颜色 -->
+        <attr name="plcg_color_stroke_un" format="color" />
+        <!-- 选中状态下的文字颜色 -->
+        <attr name="plcg_color_text" format="color" />
+        <!-- 未选中状态下的文字颜色 -->
+        <attr name="plcg_color_text_un" format="color" />
+        <!-- 选中后的背景颜色 -->
+        <attr name="plcg_color_bg" format="color" />
+        <!-- 未选中状态的背景颜色   -->
+        <attr name="plcg_color_bg_un" format="color" />
 
     </declare-styleable>
 
