--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,4 +43,15 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_clean"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dip"
+        android:layout_marginBottom="16dip"
+        android:text="清空"
+        app:layout_constraintEnd_toStartOf="@id/btn_show"
+        app:layout_constraintTop_toTopOf="@id/btn_show" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
