修复自定义颜色的bug

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,16 +10,16 @@
         android:id="@+id/mPLChipGroup1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="16dip"
-        app:chipSpacingHorizontal="8dip"
-        app:chipSpacingVertical="8dip"
+        android:layout_margin="@dimen/plcg_dp_16"
+        app:chipSpacingHorizontal="@dimen/plcg_dp_8"
+        app:chipSpacingVertical="@dimen/plcg_dp_8"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:plcg_disable="false"
-        app:plcg_height="24dip"
+        app:plcg_height="@dimen/plcg_dp_24"
         app:plcg_maxCount="5"
-        app:plcg_textSize="14dp"
+        app:plcg_textSize="@dimen/plcg_dp_14"
         app:selectionRequired="true"
         app:singleSelection="false" />
 
@@ -27,9 +27,9 @@
         android:id="@+id/mCheckBox_single"
         android:layout_width="0dip"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dip"
-        android:layout_marginTop="32dip"
-        android:layout_marginEnd="16dip"
+        android:layout_marginStart="@dimen/plcg_dp_16"
+        android:layout_marginTop="@dimen/plcg_dp_24"
+        android:layout_marginEnd="@dimen/plcg_dp_16"
         android:text="单选模式"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -39,20 +39,33 @@
         android:id="@+id/mCheckBox_disable"
         android:layout_width="0dip"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dip"
-        android:layout_marginTop="8dip"
-        android:layout_marginEnd="16dip"
+        android:layout_marginStart="@dimen/plcg_dp_16"
+        android:layout_marginTop="@dimen/plcg_dp_8"
+        android:layout_marginEnd="@dimen/plcg_dp_16"
         android:checked="false"
         android:text="禁用"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/mCheckBox_single" />
 
+    <com.google.android.material.checkbox.MaterialCheckBox
+        android:id="@+id/mCheckBox_dialog_style"
+        android:layout_width="0dip"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/plcg_dp_16"
+        android:layout_marginTop="@dimen/plcg_dp_8"
+        android:layout_marginEnd="@dimen/plcg_dp_16"
+        android:checked="false"
+        android:text="Dialog显示在中间\n建议手机显示底部，平板显示中间"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/mCheckBox_disable" />
+
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_show"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dip"
+        android:layout_marginBottom="@dimen/plcg_dp_16"
         android:text="显示所选的项"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -62,8 +75,8 @@
         android:id="@+id/btn_clean_all"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dip"
-        android:layout_marginBottom="16dip"
+        android:layout_marginEnd="@dimen/plcg_dp_16"
+        android:layout_marginBottom="@dimen/plcg_dp_16"
         android:text="清空所有"
         app:layout_constraintEnd_toStartOf="@id/btn_show"
         app:layout_constraintTop_toTopOf="@id/btn_show" />
@@ -72,8 +85,8 @@
         android:id="@+id/btn_clean_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dip"
-        android:layout_marginBottom="16dip"
+        android:layout_marginStart="@dimen/plcg_dp_16"
+        android:layout_marginBottom="@dimen/plcg_dp_16"
         android:text="清除指定"
         app:layout_constraintStart_toEndOf="@id/btn_show"
         app:layout_constraintTop_toTopOf="@id/btn_show" />
@@ -82,7 +95,7 @@
         android:id="@+id/btn_choose_all"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dip"
+        android:layout_marginStart="@dimen/plcg_dp_16"
         android:text="选择全部"
         app:layout_constraintBottom_toTopOf="@id/btn_show"
         app:layout_constraintStart_toEndOf="@id/btn_show" />
@@ -91,7 +104,7 @@
         android:id="@+id/btn_dialog_choose_single"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dip"
+        android:layout_marginStart="@dimen/plcg_dp_16"
         android:text="Dialog单选"
         android:textAllCaps="false"
         app:layout_constraintBottom_toTopOf="@id/btn_choose_all"
@@ -101,7 +114,7 @@
         android:id="@+id/btn_dialog_choose_multi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dip"
+        android:layout_marginStart="@dimen/plcg_dp_16"
         android:text="Dialog多选"
         android:textAllCaps="false"
         app:layout_constraintStart_toEndOf="@id/btn_dialog_choose_single"
@@ -112,7 +125,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dip"
         android:gravity="start|center_vertical"
-        android:padding="32dip"
+        android:padding="@dimen/plcg_dp_24"
         app:layout_constraintBottom_toTopOf="@id/btn_dialog_choose_single"
-        app:layout_constraintTop_toBottomOf="@id/mCheckBox_disable" />
+        app:layout_constraintTop_toBottomOf="@id/mCheckBox_dialog_style" />
 </androidx.constraintlayout.widget.ConstraintLayout>
